package iuh.fit.se.bai03_adapterdesignpattern;

public interface JsonService {
    void processJson(String json);
}