package iuh.fit.se.bai03_adapterdesignpattern;

public class XmlSystem {
    public void processXml(String xml) {
        System.out.println("📄 Xử lý dữ liệu XML: " + xml);
    }
}
